2003-05-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* include/md5.h: Set fixed alignment because otherwise the MacOS X
	  gcc doesn't like it.
	* backend/ibm.c backend/ibm-scsi.c doc/descriptions/ibm.desc:
	  Disabled object_position. That should fix the Ricoh IS-420.
	* frontend/saned.c: Try to get the correct port number when
	  /etc/services doesn't list "sane" by asking for "6566". Check
	  result of socket(). Print ip faimily and port.
	* configure configure.in frontend/Makefile.in tools/Makefile.in:
	  Remove -all_load again and try to use the correct link order for
	  libraries.

2003-05-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure configure.in frontend/saned.c
	  include/sane/config.h.in: Test for poll() and disable IPV6 if
	  not found.
	* include/lalloca.h: Remove test for MacOS X. That one breaks some
	  MacOS X systems.
	* configure configure.in frontend/Makefile.in tools/Makefile.in:
	  Add -all_load to linker flags on MacOS X to avoid linker errors.
	* backend/Makefile.in: Create directory for gt68xx firmware.

2003-05-01 Oliver Rauch <Oliver.Rauch@XSane.org>

	* backend/
		umax-scanner.c  umax-scsidef.h  umax-uc1200se.c  umax-uc630.c
		umax-ug630.c    umax-usb.c      umax.conf        umax.h
		umax-scanner.h  umax-uc1200s.c  umax-uc1260.c   umax-uc840.c
		umax-ug80.c     umax.c          umax.desc
	  doc/sane-umax.man doc/umax/*

	  update of sane-umax backend


2003-04-30  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan.h backend/snapscan-options.c
	  backend/snapscan-scsi.c doc/descriptions/snapscan.desc: SnapScan
	  backend 1.4.26, added support for Agfa Arcus 1200, better support 
	  for Benq 5000.

2003-04-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* lib/getopt.c: Removed #include again, breaks compilation on
	  OS/2.
	* config.guess config.sub: New upstream versions.
	* acinclude.m4 aclocal.m4 configure ltmain.sh: New libtool
	  upstream realease: 1.5.